--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,20 +18,11 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@service/*": [
-        "src/service/*"
-      ],
-      "@controller/*": [
-        "src/controllers/*"
-      ],
       "@common/*": [
         "src/common/*"
       ],
-      "@entity/*": [
-        "src/entities/*"
-      ],
-      "@dto/*": [
-        "src/dto/*"
+      "@modules/*": [
+        "src/modules/*"
       ],
     }
   }
